# aiodashboard

./: LICENSE  README.md  pyproject.toml
aiodashboard/: __init__.py  __main__.py  callable_code_context.py  coroutine_def.py  coroutine_def_info.py  dashboard.py  task_exec.py  task_exec_info.py  task_target_def.py
aiodashboard/login/: __init__.py  check_login.py  login_status.py  password_hash.py  require_login.py
aiodashboard/render/: __init__.py  dashboard_style.py  setup_jinja2.py
aiodashboard/render/templates/bootstrap/: alert.html  base.html  cancel-task.html  error.html  index.html  login.html  start-task.html  style.html  task-info.html
aiodashboard/render/templates/plain/: base.html  cancel-task.html  error.html  index.html  login.html  start-task.html  task-info.html
aiodashboard/util/: __init__.py  all_tasks.py  check_callable.py  coroutine_id.py  error_handler.py  get_html_input_type.py  get_package_name.py  get_type_from_str.py  setup_cookie_storage.py  task_id.py  typing.py
tests/: base.py  base_classmethod.py  base_staticmethod.py  custom_id.py  setup_classmethod.py  setup_classmethod_custom_id.py  setup_function.py  setup_method.py  setup_static_method.py  setup_staticmethod.py  setup_staticmethod_custom_id.py  setup_staticmethod_no_decorator.py  test_classmethod.py  test_classmethod_custom_id.py  test_function.py  test_method.py  test_static_method.py  test_staticmethod.py  test_staticmethod_custom_id.py  test_staticmethod_no_decorator.py
